Integer.valueOf(int) was only available in jdk 1.5
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@2909 37aeb1de-b14b-0410-9a0e-82b28170d228